# CSE276B-turtlebot-follower

turtlebot_follower/: CMakeLists.txt  package.xml
turtlebot_follower/cfg/: Follower.cfg
turtlebot_follower/launch/: follower.launch
turtlebot_follower/launch/includes/: velocity_smoother.launch.xml
turtlebot_follower/plugins/: nodelets.xml
turtlebot_follower/src/: follower.cpp
